--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="project_name">DroidRestaurant</string>
     <string name="project_welcome">Bienvenue</string>
     <string name="project_chez">chez</string>
-    <string name="project_entry">Entrées</string>
-    <string name="project_main">Plats</string>
+    <string name="project_starter">Entrées</string>
+    <string name="project_mainCourse">Plats</string>
     <string name="project_dessert">Desserts</string>
 </resources>
