--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="project_buy">Acheter</string>
     <string name="project_price">Prix</string>
     <string name="project_currency">€</string>
+    <string name="project_info" />
 </resources>
